Fix images stretching on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -400,7 +400,6 @@ input[type=number] {
 
 .card_body img {
   max-width: 50%;
-  height: fit-content;
   border-radius: 8px;
 }
 
